--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
         <strong>Let's Shop</strong>
       </a>
       <button routerLink="/cart" class="btn d-flex align-items-center">
-        <i class="fa fa-2x fa-shopping-cart" aria-hidden="true"></i><span>{{this.cartService.totalItem()}}</span>
+        <i class="fa fa-2x fa-shopping-cart" aria-hidden="true"></i><span class="badge text-bg-danger move rounded-pill ">{{this.cartService.totalItem()}}</span>
       </button>
     </div>
   </div>
