--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -14,7 +14,7 @@
     <div class="container">
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <ng-container *ngFor="let row of products">
+        <ng-container *ngFor="let row of api.products()">
           <div class="col">
             <div class="card shadow-sm">
               <img [src]="row.image" width="100%" height="225" alt="">
