--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -22,7 +22,7 @@
         <div class="col-md-2 end">
           <div class="amount">{{row.price | currency}}</div>
           <div class="save"><u>Save for later</u></div>
-          <div (click)="cartService.removeProductSignal(i)" class="remove"><u>Remove</u></div>
+          <div (click)="remove(i)" class="remove"><u>Remove</u></div>
         </div>
       </div>
     </ng-container>
